updated app.js and engine.js to incorporate rendering on mobile devices, fix reset function, incorporate princess collision.

--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@ body {
 
 #music { 
 	position: relative;
-	top: 350px;
-	left: -450px;
+	top: 750px;
+	left: 0px;
 }
 
 .water-block{
